--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ramanujan Magic Square</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ramanujan Magic Square</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
     <h1>Ramanujan Magic Square</h1>
-    <p>The magic square of 1729 by Srinivasa Ramanujan</p>
-    <div class="magic-square">
-      <div class="cell">22</div>
-      <div class="cell">12</div>
-      <div class="cell">18</div>
-      <div class="cell">87</div>
-      <div class="cell">88</div>
-      <div class="cell">17</div>
-      <div class="cell">10</div>
-      <div class="cell">84</div>
-      <div class="cell">85</div>
-      <div class="cell">24</div>
-      <div class="cell">19</div>
-      <div class="cell">82</div>
-      <div class="cell">20</div>
-      <div class="cell">89</div>
-      <div class="cell">16</div>
-      <div class="cell">86</div>
+    <div class="input-container">
+        <label for="day">Day (DD):</label>
+        <input type="number" id="day" min="1" max="31" required>
+        <label for="month">Month (MM):</label>
+        <input type="number" id="month" min="1" max="12" required>
+        <label for="year">Year (YYYY):</label>
+        <input type="number" id="year" min="1900" max="2100" required>
+        <button onclick="generateMagicSquare()">Generate Magic Square</button>
     </div>
-  </div>
-  <script src="script.js"></script>
+
+    <div id="sumDisplay" class="sum-display"></div>
+    <div id="magicSquare" class="magic-square"></div>
+    <div id="patternContainer" class="pattern-container"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
