--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="patternContainer" class="pattern-container"></div>
 
     <div class="image-container">
-        <button onclick="showImage()">Hover For More Patterns</button>
+        <button onclick="showImage()">Hover For Patterns</button>
         <img id="magicSquareImage" src="./image.png" alt="Ramanujan Magic Square" style="display:none;">
     </div>
 
