--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Magic Square</h1>
+    <h1>MAGIC SQUARE</h1>
     <div class="input-container">
         <label for="day">Day (DD):</label>
         <input type="number" id="day" min="1" max="31" required>
@@ -24,7 +24,7 @@
 
     <div class="image-container">
         <button onclick="showImage()">Hover For Patterns</button>
-        <img id="magicSquareImage" src="./image.png" alt="Ramanujan Magic Square" style="display:none;">
+        <img id="magicSquareImage" src="./image.png" alt="Magic Square Patterns" style="display:none;">
     </div>
 
     <script src="script.js"></script>
